last changes before deploying to heroku

--- a/web-server/Templates/partials/script.hbs
+++ b/web-server/Templates/partials/script.hbs
@@ -23,7 +23,7 @@
     const temp3 = document.querySelector('#p3');
 
 
-      fetch('http://localhost:3000/weather?address=' + address).then((response) => {
+      fetch('/weather?address=' + address).then((response) => {
         response.json().then((data) => {
 
          if(data.error){
